@@ -19,8 +19,6 @@
  */
 package org.zaproxy.addon.automation;
 
-import java.net.MalformedURLException;
-import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
@@ -30,8 +28,14 @@ import java.util.Map.Entry;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.regex.PatternSyntaxException;
+import java.util.stream.Collectors;
+import org.apache.commons.httpclient.URI;
+import org.apache.commons.httpclient.URIException;
 import org.parosproxy.paros.Constant;
 import org.parosproxy.paros.model.Session;
+import org.zaproxy.addon.automation.gui.EnvironmentDialog;
+import org.zaproxy.addon.automation.jobs.JobUtils;
 import org.zaproxy.zap.model.Context;
 
 public class AutomationEnvironment {
@@ -42,15 +46,22 @@ public class AutomationEnvironment {
     private static final Pattern varPattern = Pattern.compile("\\$\\{(.+?)\\}");
 
     private AutomationProgress progress;
-    private List<Context> contexts = new ArrayList<>();
-    private boolean failOnError = true;
-    private boolean failOnWarning = false;
+    private List<ContextWrapper> contexts = new ArrayList<>();
     private Map<String, Object> jobData = new HashMap<>();
-    private Map<String, String> vars = new HashMap<>(System.getenv());
+    private Map<String, String> combinedVars;
+    private boolean created = false;
+    private List<String> errors = new ArrayList<>();
+    private List<String> warnings = new ArrayList<>();
+    private AutomationPlan plan;
 
-    public AutomationEnvironment(
-            LinkedHashMap<?, ?> envData, AutomationProgress progress, Session session) {
+    private Data data = new Data();
+
+    public AutomationEnvironment(AutomationProgress progress) {
         this.progress = progress;
+    }
+
+    public AutomationEnvironment(LinkedHashMap<?, ?> envData, AutomationProgress progress) {
+        this(progress);
         if (envData == null) {
             progress.error(Constant.messages.getString("automation.error.env.missing"));
             return;
@@ -59,39 +70,20 @@ public class AutomationEnvironment {
         LinkedHashMap<?, ?> configVars = (LinkedHashMap<?, ?>) envData.get("vars");
         if (configVars != null) {
             for (Entry<?, ?> configVar : configVars.entrySet()) {
-                if (vars.containsKey(configVar.getKey().toString())) {
-                    continue;
-                }
-                vars.put(configVar.getKey().toString(), configVar.getValue().toString());
-            }
-            for (Entry<String, String> unresolvedVar : vars.entrySet()) {
-                vars.put(unresolvedVar.getKey(), replaceVars(unresolvedVar.getValue()));
+                this.getData()
+                        .getVars()
+                        .put(configVar.getKey().toString(), configVar.getValue().toString());
             }
         }
 
         LinkedHashMap<?, ?> params = (LinkedHashMap<?, ?>) envData.get("parameters");
-        if (params != null) {
-            for (Entry<?, ?> param : params.entrySet()) {
-                switch (param.getKey().toString()) {
-                    case "failOnError":
-                        failOnError = Boolean.parseBoolean(param.getValue().toString());
-                        break;
-                    case "failOnWarning":
-                        failOnWarning = Boolean.parseBoolean(param.getValue().toString());
-                        break;
-                    case "progressToStdout":
-                        progress.setOutputToStdout(
-                                Boolean.parseBoolean(param.getValue().toString()));
-                        break;
-                    default:
-                        progress.warn(
-                                Constant.messages.getString(
-                                        "automation.error.options.unknown",
-                                        AUTOMATION_CONTEXT_NAME,
-                                        param.getKey().toString()));
-                }
-            }
-        }
+        JobUtils.applyParamsToObject(
+                params,
+                this.getData().getParameters(),
+                Constant.messages.getString("automation.env.name"),
+                null,
+                progress);
+        this.progress.setOutputToStdout(this.getData().getParameters().getProgressToStdout());
 
         Object contextsObject = envData.get("contexts");
         if (contextsObject == null) {
@@ -104,27 +96,28 @@ public class AutomationEnvironment {
                             "automation.error.env.badcontexts", contextsObject));
             return;
         }
-        for (Object contextObject : ((ArrayList<?>) contextsObject).toArray()) {
-            Context context = parseContextData(contextObject, progress, session);
-            if (context != null) {
-                this.contexts.add(context);
-                if (this.isTimeToQuit()) {
-                    return;
-                }
+        ArrayList<?> contextData = (ArrayList<?>) contextsObject;
+        for (Object contextObject : contextData.toArray()) {
+            if (!(contextObject instanceof LinkedHashMap)) {
+                progress.error(
+                        Constant.messages.getString(
+                                "automation.error.env.badcontext", contextObject));
+                return;
+            }
+            ContextWrapper cdw = parseContextData((LinkedHashMap<?, ?>) contextObject, progress);
+            if (cdw != null) {
+                this.contexts.add(cdw);
             }
         }
     }
 
-    public Context parseContextData(
-            Object contextObject, AutomationProgress progress, Session session) {
-        if (!(contextObject instanceof LinkedHashMap)) {
-            progress.error(
-                    Constant.messages.getString("automation.error.env.badcontext", contextObject));
-            return null;
-        }
+    public ContextWrapper parseContextData( // TODO move into constructor?
+            LinkedHashMap<?, ?> contextData, AutomationProgress progress) {
         String name = null;
-        URL url = null;
-        for (Entry<?, ?> cdata : ((LinkedHashMap<?, ?>) contextObject).entrySet()) {
+        List<String> urls = new ArrayList<>();
+        ArrayList<?> includeRegexes = null;
+        ArrayList<?> excludeRegexes = null;
+        for (Entry<?, ?> cdata : contextData.entrySet()) {
             Object value = cdata.getValue();
             if (value == null) {
                 continue;
@@ -133,14 +126,53 @@ public class AutomationEnvironment {
                 case "name":
                     name = replaceVars(value);
                     break;
+                case "urls":
+                    if (!(value instanceof ArrayList)) {
+                        progress.error(
+                                Constant.messages.getString(
+                                        "automation.error.context.badurlslist", value));
+
+                    } else {
+                        ArrayList<?> urlList = (ArrayList<?>) value;
+                        for (Object urlObj : urlList) {
+                            try {
+                                String url = urlObj.toString();
+                                if (!url.contains("${")) {
+                                    // Cannot validate urls containing envvars
+                                    new URI(url, true);
+                                }
+                                urls.add(url);
+                            } catch (URIException e) {
+                                progress.error(
+                                        Constant.messages.getString(
+                                                "automation.error.context.badurl", urlObj));
+                            }
+                        }
+                    }
+                    break;
                 case "url":
+                    // For backwards compatibility
                     try {
-                        url = new URL(replaceVars(value));
-                    } catch (MalformedURLException e) {
+                        String url = value.toString();
+                        if (!url.contains("${")) {
+                            // Cannot validate urls containing envvars
+                            new URI(url, true);
+                        }
+                        urls.add(url);
+                        progress.warn(
+                                Constant.messages.getString(
+                                        "automation.error.context.url.deprecated"));
+                    } catch (URIException e) {
                         progress.error(
                                 Constant.messages.getString(
                                         "automation.error.context.badurl", value.toString()));
                     }
+                    break;
+                case "includePaths":
+                    includeRegexes = verifyRegexes(value, "badincludelist", progress);
+                    break;
+                case "excludePaths":
+                    excludeRegexes = verifyRegexes(value, "badexcludelist", progress);
                     break;
                 default:
                     progress.warn(
@@ -152,26 +184,102 @@ public class AutomationEnvironment {
         }
         if (name == null) {
             progress.error(
-                    Constant.messages.getString("automation.error.context.noname", contextObject));
+                    Constant.messages.getString("automation.error.context.noname", contextData));
             return null;
         }
-        if (url == null) {
+        if (urls.isEmpty()) {
             progress.error(
-                    Constant.messages.getString("automation.error.context.nourl", contextObject));
+                    Constant.messages.getString("automation.error.context.nourl", contextData));
             return null;
         }
-        Context context = session.getNewContext(name);
-        context.addIncludeInContextRegex(url + ".*");
-        return context;
+        ContextWrapper.Data data = new ContextWrapper.Data();
+        data.setName(name);
+        data.setUrls(urls);
+
+        List<String> incUrls = new ArrayList<>();
+        if (includeRegexes != null) {
+            for (Object regex : includeRegexes) {
+                incUrls.add(regex.toString());
+            }
+        }
+        data.setIncludePaths(incUrls);
+        List<String> excUrls = new ArrayList<>();
+        if (excludeRegexes != null) {
+            for (Object regex : excludeRegexes) {
+                excUrls.add(regex.toString());
+            }
+        }
+        data.setExcludePaths(excUrls);
+        return new ContextWrapper(data);
+    }
+
+    public void addContext(Context context) {
+        this.contexts.add(new ContextWrapper(context));
+    }
+
+    public void create(Session session, AutomationProgress progress) {
+
+        this.created = true;
+        this.combinedVars = null; // So that they are recreated
+        boolean hasUrls = false;
+        this.errors.clear();
+        this.warnings.clear();
+
+        for (ContextWrapper context : this.contexts) {
+            context.createContext(session, this);
+            if (context.getUrls().size() > 0) {
+                hasUrls = true;
+            }
+            if (this.isTimeToQuit()) {
+                this.errors.addAll(progress.getErrors());
+                this.warnings.addAll(progress.getWarnings());
+                return;
+            }
+        }
+        if (contexts.size() == 0) {
+            progress.error(Constant.messages.getString("automation.env.error.nocontexts"));
+        } else if (!hasUrls) {
+            progress.error(Constant.messages.getString("automation.env.error.nourls"));
+        }
+        this.errors.addAll(progress.getErrors());
+        this.warnings.addAll(progress.getWarnings());
+    }
+
+    private ArrayList<?> verifyRegexes(Object value, String key, AutomationProgress progress) {
+        if (!(value instanceof ArrayList)) {
+            progress.error(Constant.messages.getString("automation.error.context." + key, value));
+            return null;
+        }
+        ArrayList<?> regexes = (ArrayList<?>) value;
+        for (Object regex : regexes) {
+            try {
+                String regexStr = regex.toString();
+                if (!regexStr.contains("${")) {
+                    // Only validate the regex if it doesnt contain vars
+                    Pattern.compile(regexStr);
+                }
+            } catch (PatternSyntaxException e) {
+                progress.error(
+                        Constant.messages.getString(
+                                "automation.error.context.badregex",
+                                regex.toString(),
+                                e.getMessage()));
+            }
+        }
+        return regexes;
     }
 
     public String replaceVars(Object value) {
+        if (this.combinedVars == null) {
+            this.combinedVars = new HashMap<>(System.getenv());
+            this.combinedVars.putAll(this.getData().getVars());
+        }
         String text = value.toString();
         Matcher matcher = varPattern.matcher(text);
         StringBuffer sb = new StringBuffer();
 
         while (matcher.find()) {
-            String val = this.getVars().get(matcher.group(1));
+            String val = this.combinedVars.get(matcher.group(1));
             if (val != null) {
                 matcher.appendReplacement(sb, "");
                 sb.append(val);
@@ -185,6 +293,11 @@ public class AutomationEnvironment {
         return sb.toString();
     }
 
+    protected void setProgress(AutomationProgress progress) {
+        this.progress = progress;
+        this.progress.setOutputToStdout(this.getData().getParameters().getProgressToStdout());
+    }
+
     public static String getConfigFileData() {
         return ExtensionAutomation.getResourceAsString(YAML_FILE);
     }
@@ -193,30 +306,98 @@ public class AutomationEnvironment {
         return ExtensionAutomation.getResourceAsString(YAML_FILE);
     }
 
-    public List<Context> getContexts() {
+    public void addContext(ContextWrapper.Data contextData) {
+        this.contexts.add(new ContextWrapper(contextData));
+    }
+
+    public List<ContextWrapper> getContextWrappers() {
         return contexts;
     }
 
-    public Map<String, String> getVars() {
-        return vars;
+    public void setContexts(List<ContextWrapper> contexts) {
+        this.contexts = contexts;
     }
 
-    public String getVar(String name) {
-        return vars.get(name);
+    public List<Context> getContexts() {
+        return contexts.stream().map(ContextWrapper::getContext).collect(Collectors.toList());
     }
 
-    public Context getContext(String name) {
+    public List<String> getContextNames() {
+        return contexts.stream()
+                .map(ContextWrapper::getData)
+                .collect(Collectors.toList())
+                .stream()
+                .map(ContextWrapper.Data::getName)
+                .collect(Collectors.toList());
+    }
+
+    public ContextWrapper getContextWrapper(String name) {
         if (name == null || name.length() == 0) {
-            return getDefaultContext();
+            return getDefaultContextWrapper();
         }
-        for (Context context : contexts) {
-            if (name.equals(context.getName())) {
+        for (ContextWrapper context : contexts) {
+            if (name.equals(context.getContext().getName())) {
                 return context;
             }
         }
         return null;
     }
 
+    public Context getContext(String name) {
+        ContextWrapper wrapper = this.getContextWrapper(name);
+        if (wrapper != null) {
+            return wrapper.getContext();
+        }
+        return null;
+    }
+
+    public String getSummary() {
+        if (this.contexts.size() == 0) {
+            return Constant.messages.getString("automation.env.error.nocontexts");
+        }
+        return Constant.messages.getString(
+                "automation.dialog.env.summary",
+                this.contexts.stream()
+                        .map(c -> c.getData().getName())
+                        .collect(Collectors.toList())
+                        .toString());
+    }
+
+    public boolean isCreated() {
+        return created;
+    }
+
+    public boolean hasErrors() {
+        return !this.errors.isEmpty();
+    }
+
+    public boolean hasWarnings() {
+        return !this.warnings.isEmpty();
+    }
+
+    public List<String> getErrors() {
+        return errors;
+    }
+
+    public List<String> getWarnings() {
+        return warnings;
+    }
+
+    public AutomationPlan getPlan() {
+        return plan;
+    }
+
+    public void setPlan(AutomationPlan plan) {
+        this.plan = plan;
+    }
+
+    /**
+     * Use the methods which return a ContextWrapper and then access this list of URLs from the
+     * wrappers.
+     *
+     * @deprecated
+     */
+    @Deprecated
     public String getUrlStringForContext(Context context) {
         if (context != null) {
             String firstRegex = context.getIncludeInContextRegexs().get(0);
@@ -225,8 +406,18 @@ public class AutomationEnvironment {
         return null;
     }
 
-    public Context getDefaultContext() {
+    public ContextWrapper getDefaultContextWrapper() {
+        if (contexts.isEmpty()) {
+            return null;
+        }
         return contexts.get(0);
+    }
+
+    public Context getDefaultContext() {
+        if (contexts.isEmpty()) {
+            return null;
+        }
+        return contexts.get(0).getContext();
     }
 
     public void addJobData(String key, Object data) {
@@ -242,14 +433,99 @@ public class AutomationEnvironment {
     }
 
     public boolean isFailOnError() {
-        return failOnError;
+        return this.getData().getParameters().getFailOnError();
     }
 
     public boolean isFailOnWarning() {
-        return failOnWarning;
+        return this.getData().getParameters().getFailOnWarning();
     }
 
     public boolean isTimeToQuit() {
-        return (failOnError && progress.hasErrors()) || (failOnWarning && progress.hasWarnings());
+        return (isFailOnError() && progress.hasErrors())
+                || (isFailOnWarning() && progress.hasWarnings());
+    }
+
+    public void showDialog() {
+        new EnvironmentDialog(this).setVisible(true);
+    }
+
+    public Data getData() {
+        // The contexts are maintained locally
+        this.data.setContexts(
+                this.contexts.stream().map(ContextWrapper::getData).collect(Collectors.toList()));
+        return this.data;
+    }
+
+    public static class Data extends AutomationData {
+        private List<ContextWrapper.Data> contexts = new ArrayList<>();
+        private Parameters parameters;
+        private Map<String, String> vars = new LinkedHashMap<>();
+
+        public Data() {
+            setParameters(new Parameters());
+        }
+
+        public List<ContextWrapper.Data> getContexts() {
+            return contexts;
+        }
+
+        public void setContexts(List<ContextWrapper.Data> contexts) {
+            this.contexts = contexts;
+        }
+
+        public Parameters getParameters() {
+            return parameters;
+        }
+
+        public void setParameters(Parameters parameters) {
+            this.parameters = parameters;
+        }
+
+        public Map<String, String> getVars() {
+            return vars;
+        }
+
+        public void setVars(Map<String, String> vars) {
+            this.vars = vars;
+        }
+    }
+
+    public static class Parameters extends AutomationData {
+        private boolean failOnError = true;
+        private boolean failOnWarning;
+        private boolean progressToStdout = true;
+
+        public Parameters() {}
+
+        public Parameters(boolean failOnError, boolean failOnWarning, boolean progressToStdout) {
+            super();
+            this.failOnError = failOnError;
+            this.failOnWarning = failOnWarning;
+            this.progressToStdout = progressToStdout;
+        }
+
+        public boolean getFailOnError() {
+            return failOnError;
+        }
+
+        public boolean getFailOnWarning() {
+            return failOnWarning;
+        }
+
+        public boolean getProgressToStdout() {
+            return progressToStdout;
+        }
+
+        public void setFailOnError(boolean failOnError) {
+            this.failOnError = failOnError;
+        }
+
+        public void setFailOnWarning(boolean failOnWarning) {
+            this.failOnWarning = failOnWarning;
+        }
+
+        public void setProgressToStdout(boolean progressToStdout) {
+            this.progressToStdout = progressToStdout;
+        }
     }
 }
